transitioned to parquet for intermediate file format

--- a/notebooks/end-to-end-test.ipynb
+++ b/notebooks/end-to-end-test.ipynb
@@ -172,7 +172,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example_input = parquet[0:5]\n",
+    "# example_input = parquet[0:5]\n",
+    "example_input = parquet[0]\n",
     "additional_features = ELAsTiCC2_ORACLEFeatureExtractor._get_static_features()\n",
     "\n",
     "def get_phot_from_parquet(parquet_rows):\n",
@@ -222,7 +223,7 @@
      "output_type": "stream",
      "text": [
       "INFO:root:Starting oracle_resspect_classifier.elasticc2_oracle_feature_extractor.ELAsTiCC2_ORACLEFeatureExtractor fit...\n",
-      "INFO:root:Features have been saved to: ../TOM_training_features.csv\n"
+      "INFO:root:Features have been saved to: ../intermediate_TOM_training_features.parquet\n"
      ]
     }
    ],
@@ -232,7 +233,7 @@
     "feature_extraction_method = 'oracle_resspect_classifier.elasticc2_oracle_feature_extractor.ELAsTiCC2_ORACLEFeatureExtractor'\n",
     "fit(\n",
     "    data_dic,\n",
-    "    output_features_file = '../TOM_training_features.csv',\n",
+    "    output_features_file = '../intermediate_TOM_training_features.parquet',\n",
     "    feature_extractor = feature_extraction_method,\n",
     "    filters = 'LSST',\n",
     "    additional_info = additional_features,\n",
@@ -246,6 +247,13 @@
    "id": "31fe0e37",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "228\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -272,9 +280,9 @@
        "      <th>type</th>\n",
        "      <th>sncode</th>\n",
        "      <th>MJD</th>\n",
-       "      <th>BAND</th>\n",
        "      <th>FLUXCAL</th>\n",
        "      <th>FLUXCALERR</th>\n",
+       "      <th>BAND</th>\n",
        "      <th>PHOTFLAG</th>\n",
        "      <th>RA</th>\n",
        "      <th>DEC</th>\n",
@@ -309,7 +317,7 @@
        "      <td>[60423.4061, 60423.4145, 60428.4206, 60448.362...</td>\n",
        "      <td>[2.7815372943878174, -42.94839096069336, -14.2...</td>\n",
        "      <td>[41.806304931640625, 39.68401336669922, 36.072...</td>\n",
-       "      <td>['Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', ...</td>\n",
+       "      <td>[Y, Y, Y, Y, Y, Y, Y, Y, Y, Y, Y, Y, Y, Y, Y, ...</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>304.243393</td>\n",
        "      <td>-4.291256</td>\n",
@@ -319,8 +327,8 @@
        "      <td>0.65532</td>\n",
        "      <td>0.655564</td>\n",
        "      <td>0.65532</td>\n",
-       "      <td>-9.000000</td>\n",
-       "      <td>-9.000</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>-9.0</td>\n",
        "      <td>304.243466</td>\n",
        "      <td>-4.291261</td>\n",
        "      <td>0.262877</td>\n",
@@ -333,138 +341,6 @@
        "      <td>20.549498</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>352</td>\n",
-       "      <td>0.433314</td>\n",
-       "      <td>Ia</td>\n",
-       "      <td>110</td>\n",
-       "      <td>[60484.3786, 60484.3831, 60484.3983, 60484.402...</td>\n",
-       "      <td>[70.78070068359375, -60.73984146118164, 60.558...</td>\n",
-       "      <td>[47.87349319458008, 39.694358825683594, 51.164...</td>\n",
-       "      <td>['Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', ...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>12.713786</td>\n",
-       "      <td>-39.216479</td>\n",
-       "      <td>0.008067</td>\n",
-       "      <td>0.000403</td>\n",
-       "      <td>0.433314</td>\n",
-       "      <td>0.42573</td>\n",
-       "      <td>0.434414</td>\n",
-       "      <td>0.42573</td>\n",
-       "      <td>-9.000000</td>\n",
-       "      <td>-9.000</td>\n",
-       "      <td>12.713772</td>\n",
-       "      <td>-39.216484</td>\n",
-       "      <td>0.042478</td>\n",
-       "      <td>0.6818</td>\n",
-       "      <td>24.345760</td>\n",
-       "      <td>22.617800</td>\n",
-       "      <td>21.138603</td>\n",
-       "      <td>20.500687</td>\n",
-       "      <td>20.216938</td>\n",
-       "      <td>20.011747</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>406</td>\n",
-       "      <td>0.539642</td>\n",
-       "      <td>Ia</td>\n",
-       "      <td>110</td>\n",
-       "      <td>[60299.138, 60303.1139, 60303.1163, 60303.1369...</td>\n",
-       "      <td>[104.41342163085938, 77.31571960449219, 48.709...</td>\n",
-       "      <td>[21.652667999267578, 23.016080856323242, 23.93...</td>\n",
-       "      <td>['Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', ...</td>\n",
-       "      <td>[0, 0, 0, 4096, 4096, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>40.319748</td>\n",
-       "      <td>-33.143045</td>\n",
-       "      <td>0.019233</td>\n",
-       "      <td>0.000962</td>\n",
-       "      <td>0.539642</td>\n",
-       "      <td>0.53686</td>\n",
-       "      <td>0.540480</td>\n",
-       "      <td>0.53686</td>\n",
-       "      <td>-9.000000</td>\n",
-       "      <td>-9.000</td>\n",
-       "      <td>40.319858</td>\n",
-       "      <td>-33.143064</td>\n",
-       "      <td>0.338374</td>\n",
-       "      <td>0.7856</td>\n",
-       "      <td>22.706654</td>\n",
-       "      <td>22.148342</td>\n",
-       "      <td>21.151966</td>\n",
-       "      <td>20.643431</td>\n",
-       "      <td>20.344053</td>\n",
-       "      <td>20.194252</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>695</td>\n",
-       "      <td>0.300201</td>\n",
-       "      <td>Ia</td>\n",
-       "      <td>10</td>\n",
-       "      <td>[60721.3707, 60769.3947, 60769.396, 60786.3555...</td>\n",
-       "      <td>[-22.408533096313477, 7.243584156036377, 3.790...</td>\n",
-       "      <td>[36.39692306518555, 23.02618408203125, 22.8626...</td>\n",
-       "      <td>['Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', ...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>228.555405</td>\n",
-       "      <td>-28.468939</td>\n",
-       "      <td>0.202867</td>\n",
-       "      <td>0.010143</td>\n",
-       "      <td>0.300201</td>\n",
-       "      <td>0.00100</td>\n",
-       "      <td>0.210101</td>\n",
-       "      <td>0.22199</td>\n",
-       "      <td>0.299424</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>228.555363</td>\n",
-       "      <td>-28.468977</td>\n",
-       "      <td>0.188067</td>\n",
-       "      <td>0.1831</td>\n",
-       "      <td>22.297915</td>\n",
-       "      <td>21.601532</td>\n",
-       "      <td>20.656731</td>\n",
-       "      <td>20.225105</td>\n",
-       "      <td>19.867882</td>\n",
-       "      <td>19.633068</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>871</td>\n",
-       "      <td>0.784873</td>\n",
-       "      <td>Ia</td>\n",
-       "      <td>110</td>\n",
-       "      <td>[60948.3459, 60951.3069, 60951.3298, 60951.350...</td>\n",
-       "      <td>[41.522674560546875, 0.2425825446844101, 61.86...</td>\n",
-       "      <td>[18.4195499420166, 21.90092658996582, 18.81880...</td>\n",
-       "      <td>['Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', ...</td>\n",
-       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>75.941690</td>\n",
-       "      <td>-49.172649</td>\n",
-       "      <td>0.009739</td>\n",
-       "      <td>0.000487</td>\n",
-       "      <td>0.784873</td>\n",
-       "      <td>0.78404</td>\n",
-       "      <td>0.784721</td>\n",
-       "      <td>0.78404</td>\n",
-       "      <td>-9.000000</td>\n",
-       "      <td>-9.000</td>\n",
-       "      <td>75.941553</td>\n",
-       "      <td>-49.172552</td>\n",
-       "      <td>0.475900</td>\n",
-       "      <td>0.8702</td>\n",
-       "      <td>23.190773</td>\n",
-       "      <td>23.146837</td>\n",
-       "      <td>22.730417</td>\n",
-       "      <td>21.964487</td>\n",
-       "      <td>21.736803</td>\n",
-       "      <td>21.592535</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -472,80 +348,36 @@
       "text/plain": [
        "   diaobject_id  redshift type  sncode  \\\n",
        "0            73  0.654122   Ia     110   \n",
-       "1           352  0.433314   Ia     110   \n",
-       "2           406  0.539642   Ia     110   \n",
-       "3           695  0.300201   Ia      10   \n",
-       "4           871  0.784873   Ia     110   \n",
        "\n",
        "                                                 MJD  \\\n",
        "0  [60423.4061, 60423.4145, 60428.4206, 60448.362...   \n",
-       "1  [60484.3786, 60484.3831, 60484.3983, 60484.402...   \n",
-       "2  [60299.138, 60303.1139, 60303.1163, 60303.1369...   \n",
-       "3  [60721.3707, 60769.3947, 60769.396, 60786.3555...   \n",
-       "4  [60948.3459, 60951.3069, 60951.3298, 60951.350...   \n",
-       "\n",
-       "                                                BAND  \\\n",
-       "0  [2.7815372943878174, -42.94839096069336, -14.2...   \n",
-       "1  [70.78070068359375, -60.73984146118164, 60.558...   \n",
-       "2  [104.41342163085938, 77.31571960449219, 48.709...   \n",
-       "3  [-22.408533096313477, 7.243584156036377, 3.790...   \n",
-       "4  [41.522674560546875, 0.2425825446844101, 61.86...   \n",
        "\n",
        "                                             FLUXCAL  \\\n",
-       "0  [41.806304931640625, 39.68401336669922, 36.072...   \n",
-       "1  [47.87349319458008, 39.694358825683594, 51.164...   \n",
-       "2  [21.652667999267578, 23.016080856323242, 23.93...   \n",
-       "3  [36.39692306518555, 23.02618408203125, 22.8626...   \n",
-       "4  [18.4195499420166, 21.90092658996582, 18.81880...   \n",
+       "0  [2.7815372943878174, -42.94839096069336, -14.2...   \n",
        "\n",
        "                                          FLUXCALERR  \\\n",
-       "0  ['Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', ...   \n",
-       "1  ['Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', ...   \n",
-       "2  ['Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', ...   \n",
-       "3  ['Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', ...   \n",
-       "4  ['Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', 'Y', ...   \n",
+       "0  [41.806304931640625, 39.68401336669922, 36.072...   \n",
        "\n",
-       "                                            PHOTFLAG          RA        DEC  \\\n",
-       "0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  304.243393  -4.291256   \n",
-       "1  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   12.713786 -39.216479   \n",
-       "2  [0, 0, 0, 4096, 4096, 0, 0, 0, 0, 0, 0, 0, 0, ...   40.319748 -33.143045   \n",
-       "3  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  228.555405 -28.468939   \n",
-       "4  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   75.941690 -49.172649   \n",
+       "                                                BAND  \\\n",
+       "0  [Y, Y, Y, Y, Y, Y, Y, Y, Y, Y, Y, Y, Y, Y, Y, ...   \n",
+       "\n",
+       "                                            PHOTFLAG          RA       DEC  \\\n",
+       "0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  304.243393 -4.291256   \n",
        "\n",
        "      MWEBV  MWEBV_ERR  REDSHIFT_FINAL  REDSHIFT_FINAL_ERR  HOSTGAL_PHOTOZ  \\\n",
        "0  0.130539   0.006527        0.654122             0.65532        0.655564   \n",
-       "1  0.008067   0.000403        0.433314             0.42573        0.434414   \n",
-       "2  0.019233   0.000962        0.539642             0.53686        0.540480   \n",
-       "3  0.202867   0.010143        0.300201             0.00100        0.210101   \n",
-       "4  0.009739   0.000487        0.784873             0.78404        0.784721   \n",
        "\n",
        "   HOSTGAL_PHOTOZ_ERR  HOSTGAL_SPECZ  HOSTGAL_SPECZ_ERR  HOSTGAL_RA  \\\n",
-       "0             0.65532      -9.000000             -9.000  304.243466   \n",
-       "1             0.42573      -9.000000             -9.000   12.713772   \n",
-       "2             0.53686      -9.000000             -9.000   40.319858   \n",
-       "3             0.22199       0.299424              0.001  228.555363   \n",
-       "4             0.78404      -9.000000             -9.000   75.941553   \n",
+       "0             0.65532           -9.0               -9.0  304.243466   \n",
        "\n",
        "   HOSTGAL_DEC  HOSTGAL_SNSEP  HOSTGAL_ELLIPTICITY  HOSTGAL_MAG_u  \\\n",
        "0    -4.291261       0.262877               0.3411      23.957273   \n",
-       "1   -39.216484       0.042478               0.6818      24.345760   \n",
-       "2   -33.143064       0.338374               0.7856      22.706654   \n",
-       "3   -28.468977       0.188067               0.1831      22.297915   \n",
-       "4   -49.172552       0.475900               0.8702      23.190773   \n",
        "\n",
        "   HOSTGAL_MAG_g  HOSTGAL_MAG_r  HOSTGAL_MAG_i  HOSTGAL_MAG_z  HOSTGAL_MAG_Y  \\\n",
        "0      22.941786      21.804691      21.145388      20.711977      20.549498   \n",
-       "1      22.617800      21.138603      20.500687      20.216938      20.011747   \n",
-       "2      22.148342      21.151966      20.643431      20.344053      20.194252   \n",
-       "3      21.601532      20.656731      20.225105      19.867882      19.633068   \n",
-       "4      23.146837      22.730417      21.964487      21.736803      21.592535   \n",
        "\n",
        "  orig_sample  \n",
-       "0       train  \n",
-       "1       train  \n",
-       "2       train  \n",
-       "3       train  \n",
-       "4       train  "
+       "0       train  "
       ]
      },
      "execution_count": 6,
@@ -560,10 +392,12 @@
     "\n",
     "pd.set_option('display.max_columns', 40)\n",
     "\n",
-    "data = pd.read_csv('../TOM_training_features.csv', index_col=0)\n",
+    "data = pd.read_parquet('../intermediate_TOM_training_features.parquet')\n",
+    "# data = pd.read_csv('../TOM_training_features.csv', index_col=0)\n",
+    "print(len(data['MJD'][0]))\n",
     "data['orig_sample'] = 'train'\n",
     "data['type'] = np.where((data['sncode'] == 10) | (data['sncode'] == 110), 'Ia', 'non-Ia')\n",
-    "data.to_csv('../TOM_training_features.csv', index=False)\n",
+    "data.to_parquet('../final_TOM_training_features.parquet', index=False)\n",
     "\n",
     "data"
    ]
@@ -572,6 +406,46 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d2dc6fab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# basic classifier testing before trying the full active learning loop\n",
+    "from oracle_resspect_classifier.oracle_classifier import OracleClassifier\n",
+    "\n",
+    "classifier_test = OracleClassifier(dir='../', weights_dir='/pscratch/sd/a/arjun15/')\n",
+    "classifier_test.predict(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b35ed99a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lightcurve plots \n",
+    "from oracle.pretrained.ELAsTiCC import time_dependent_feature_list\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "x_ts = pd.DataFrame(data[time_dependent_feature_list].iloc[0]).T\n",
+    "\n",
+    "img = ELAsTiCC2_ORACLEFeatureExtractor._plot_sample_lc(x_ts)\n",
+    "if isinstance(img, torch.Tensor):\n",
+    "    img_np = img.permute(1, 2, 0).numpy().astype(int)\n",
+    "else:\n",
+    "    img_np = np.asarray(img)\n",
+    "\n",
+    "plt.figure(figsize=(4, 4))\n",
+    "plt.imshow(img_np)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc08c67e",
    "metadata": {},
    "outputs": [],
    "source": []
