implemented most of the time domain loop, now need the fastdb instance to get everything working

--- a/notebooks/end-to-end-test.ipynb
+++ b/notebooks/end-to-end-test.ipynb
@@ -3517,11 +3517,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from resspect import TimeDomainConfiguration, time_domain_loop\n",
+    "\n",
     "def run_td_loop(day):\n",
     "    # define parameters for TimeDomainConfiguration class\n",
-    "    # call time_domain_loop() from RESSPECT with given configuration\n",
+    "    feature_extraction_method = 'oracle_resspect_classifier.elasticc2_oracle_feature_extractor.ELAsTiCC2_ORACLEFeatureExtractor'\n",
+    "    classifier = 'oracle_resspect_classifier.oracle_classifier.OracleResspectClassifier'\n",
+    "    \n",
+    "    days = [] # figure this out\n",
+    "    training = None\n",
+    "    \n",
+    "    strategy = 'UncertaintySampling'\n",
+    "    batch = 5\n",
+    "    sep_files = True\n",
+    "    path_to_features_dir = './datasets'\n",
+    "    \n",
+    "    # output results for metrics\n",
+    "    output_metrics_file = './results/metrics_' + strategy + '_' + str('ini_train_set') + '_batch' + str(batch) + '_day_' + str(day) + '.csv'\n",
+    "    \n",
+    "    # output query sample\n",
+    "    output_query_file = './results/queried_' + strategy + '_' + str('ini_train_set') + '_batch' + str(batch) + '_day_' + str(day) + '.csv'\n",
+    "    \n",
+    "    path_to_ini_files = {}\n",
+    "    path_to_ini_files['train'] = './datasets/training_set.parquet'\n",
+    "    path_to_ini_files['test'] = './datasets/test_set.parquet'\n",
+    "    path_to_ini_files['validation'] = './datasets/val_set.parquet'\n",
+    "    \n",
+    "    survey = 'LSST'\n",
+    "    \n",
+    "    fname_pattern = [''] # figure this out as well\n",
+    "    queryable = False\n",
+    "    \n",
+    "    time_domain_config = TimeDomainConfiguration(\n",
+    "        days=days, output_metrics_file=output_metrics_file, output_queried_file=output_query_file, path_to_features_dir=path_to_features_dir,\n",
+    "        strategy=strategy, fname_pattern=fname_pattern, path_to_ini_files=path_to_ini_files, batch=batch, classifier=classifier,\n",
+    "        sep_files=sep_files, survey=survey, feature_extraction_method=feature_extraction_method\n",
+    "    )\n",
+    "    \n",
+    "    # run time domain active learning loop\n",
+    "    time_domain_loop(time_domain_config, screen=False)\n",
+    "    \n",
     "    # grab the object ids for the returned objects (to be queried)\n",
-    "    pass"
+    "    ids = list(pd.read_csv(output_query_file)['objectid'])\n",
+    "    ids = [int(id) for id in ids]\n",
+    "    num = int(len(ids)/5)\n",
+    "    mod = len(ids)%5\n",
+    "    num_list = [num]*5\n",
+    "    mod_list = []\n",
+    "    for i in range(mod):\n",
+    "        mod_list.append(1)\n",
+    "    rem = 5-len(mod_list)\n",
+    "    mod_list = mod_list+[0]*rem\n",
+    "    num_list=list(np.asarray(num_list)+mod_list)\n",
+    "    priorities = []\n",
+    "    priorities.append([1]*num_list[0]+[2]*num_list[1]+[3]*num_list[2]+[4]*num_list[3]+[5]*num_list[4])    \n",
+    "    priorities = priorities[0]\n",
+    "    \n",
+    "    # send these queried objects to the TOM\n",
+    "    # submit_queries_to_TOM('awoldag', '../../password.txt', objectids = ids, priorities = priorities, requester = 'resspect')\n",
+    "    print(ids, priorities)"
    ]
   },
   {
